fixing z-index of circles

--- a/src/components/VennDiagram/VennDiagram.scss
+++ b/src/components/VennDiagram/VennDiagram.scss
@@ -14,6 +14,7 @@ $circle-size: 300px;
   left: 50%;
   margin-left: calc(#{-$circle-size} / 2);
   transition: all 0.75s ease;
+  z-index: 1;
 }
 
 .c-venn__circle--ux-designer {
@@ -28,6 +29,7 @@ $circle-size: 300px;
 
 .c-venn__circle--ux-engineer {
   background: rgba(128, 0, 128, 0.75);
+  z-index: 2;
   transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.5) 0.75s;
 
   .c-venn--hidden & {
